added scraping of menu images, as well

--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -46,7 +46,7 @@ a.button.has_many_add {
   float: left;
   margin: 10px 10px 0 0;
 }
-fieldset.inputs.has_many_fields {
+fieldset.inputs.has_many_fields.double-items {
     width: 49%;
     float: left;
     margin-right: 1%;
