--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -42,15 +42,6 @@ td.col {
     box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 }
-a.button.has_many_add {
-  float: left;
-  margin: 10px 10px 0 0;
-}
-fieldset.inputs.has_many_fields.double-items {
-    width: 49%;
-    float: left;
-    margin-right: 1%;
-}
 h4.warning {
   background-color: #fdb;
   padding: 5px 0;
@@ -67,4 +58,47 @@ h4.success {
 }
 body.active_admin {
   @import 'select2'
+}
+a.button.has_many_add {
+  margin-bottom: 20px;
+}
+.item-summary {
+  margin: 2px 0;
+  padding: 4px 10px;
+  background-color: #ddd;
+  border: 1px solid #bbb;
+  span.name {
+    font-weight: bold;
+  }
+  span.cost {
+    font-weight: bold;
+    color: #3a3;
+    margin-right: 10px;
+    /* text-align: center; */
+    float: right;
+  }
+  span.close {
+    float: right;
+    padding: 5px 10px;
+    background-color: #333;
+    color: white;
+    margin: -5px -11px -5px 0;
+  }
+}
+.menu-images {
+  overflow-y: scroll;
+  max-height: 600px;
+  img {
+    width: 96%;
+    margin: 10px auto;
+    border: 4px solid #888;
+  }
+}
+span.tag {
+  float: right;
+  padding: 2px 5px;
+  background-color: #eee;
+  margin-right: 5px;
+  font-size: 0.8em;
+  border: 1px solid #bbb;
 }
